test/compile_errors/err_refutable_param_pattern_single_clause.w
//! expect-error: refutable parameter pattern requires another function clause or an else

fn only(Some(x): Option[i32]) -> i32:
    x

fn main:
    assert(only(Some(1)) == 1)
